; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cddl/contrib/opensolaris/uts/common/fs/zfs/lua/extr_lparser.c_suffixedexp.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cddl/contrib/opensolaris/uts/common/fs/zfs/lua/extr_lparser.c_suffixedexp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i32, %struct.TYPE_10__, i32* }
%struct.TYPE_10__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_11__*, i32*)* @suffixedexp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @suffixedexp(%struct.TYPE_11__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_11__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.TYPE_11__* %0, %struct.TYPE_11__** %3, align 8
  store i32* %1, i32** %4, align 8
  %9 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %9, i32 0, i32 2
  %11 = load i32*, i32** %10, align 8
  store i32* %11, i32** %5, align 8
  %12 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  store i32 %14, i32* %6, align 4
  %15 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %16 = load i32*, i32** %4, align 8
  %17 = call i32 @primaryexp(%struct.TYPE_11__* %15, i32* %16)
  br label %18

18:                                               ; preds = %57, %2
  %19 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %20 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %19, i32 0, i32 1
  %21 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  switch i32 %22, label %56 [
    i32 46, label %23
    i32 91, label %27
    i32 58, label %36
    i32 40, label %48
    i32 128, label %48
    i32 123, label %48
  ]

23:                                               ; preds = %18
  %24 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %25 = load i32*, i32** %4, align 8
  %26 = call i32 @fieldsel(%struct.TYPE_11__* %24, i32* %25)
  br label %57

27:                                               ; preds = %18
  %28 = load i32*, i32** %5, align 8
  %29 = load i32*, i32** %4, align 8
  %30 = call i32 @luaK_exp2anyregup(i32* %28, i32* %29)
  %31 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %32 = call i32 @yindex(%struct.TYPE_11__* %31, i32* %7)
  %33 = load i32*, i32** %5, align 8
  %34 = load i32*, i32** %4, align 8
  %35 = call i32 @luaK_indexed(i32* %33, i32* %34, i32* %7)
  br label %57

36:                                               ; preds = %18
  %37 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %38 = call i32 @luaX_next(%struct.TYPE_11__* %37)
  %39 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %40 = call i32 @checkname(%struct.TYPE_11__* %39, i32* %8)
  %41 = load i32*, i32** %5, align 8
  %42 = load i32*, i32** %4, align 8
  %43 = call i32 @luaK_self(i32* %41, i32* %42, i32* %8)
  %44 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %45 = load i32*, i32** %4, align 8
  %46 = load i32, i32* %6, align 4
  %47 = call i32 @funcargs(%struct.TYPE_11__* %44, i32* %45, i32 %46)
  br label %57

48:                                               ; preds = %18, %18, %18
  %49 = load i32*, i32** %5, align 8
  %50 = load i32*, i32** %4, align 8
  %51 = call i32 @luaK_exp2nextreg(i32* %49, i32* %50)
  %52 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %53 = load i32*, i32** %4, align 8
  %54 = load i32, i32* %6, align 4
  %55 = call i32 @funcargs(%struct.TYPE_11__* %52, i32* %53, i32 %54)
  br label %57

56:                                               ; preds = %18
  ret void

57:                                               ; preds = %48, %36, %27, %23
  br label %18
}

declare dso_local i32 @primaryexp(%struct.TYPE_11__*, i32*) #1

declare dso_local i32 @fieldsel(%struct.TYPE_11__*, i32*) #1

declare dso_local i32 @luaK_exp2anyregup(i32*, i32*) #1

declare dso_local i32 @yindex(%struct.TYPE_11__*, i32*) #1

declare dso_local i32 @luaK_indexed(i32*, i32*, i32*) #1

declare dso_local i32 @luaX_next(%struct.TYPE_11__*) #1

declare dso_local i32 @checkname(%struct.TYPE_11__*, i32*) #1

declare dso_local i32 @luaK_self(i32*, i32*, i32*) #1

declare dso_local i32 @funcargs(%struct.TYPE_11__*, i32*, i32) #1

declare dso_local i32 @luaK_exp2nextreg(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
